Fix of project name alignment in IE, fixes bug 1304228

--- a/assets/app/styles/_project-menu.less
+++ b/assets/app/styles/_project-menu.less
@@ -141,7 +141,7 @@
     max-width: 480px;
     .bootstrap-select.btn-group {
       .btn {
-        padding: 9px 40px 7px 30px;
+        padding: 15px 40px 15px 30px;
         &:before {
           color: @gray-light;
           content: 'Project';
